// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AboutHero matches snapshot (dark mode) 1`] = `
<div>
  <section
    class="css-1oi1bvt"
    data-testid="about-hero"
  >
    <div
      class="MuiBox-root css-1hs42wd"
    >
      <div
        class="MuiBox-root css-19ieufy"
        variant="1"
      />
      <div
        class="MuiBox-root css-oyqht7"
        variant="2"
      />
      <div
        class="MuiBox-root css-1rht8gy"
        variant="3"
      />
    </div>
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-8y1sfv-MuiContainer-root"
    >
      <div
        style="display: flex; flex-direction: column; align-items: center;"
      >
        <div
          class="MuiBox-root css-1qpzi1f"
        >
          <div>
            <p
              class="MuiTypography-root MuiTypography-body1 css-dhsisw-MuiTypography-root"
            >
              About Me
            </p>
          </div>
          <div>
            <h1
              class="css-a0eunv"
            >
              Hi, I'm Hemanth. I design thoughtful digital experiences.
            </h1>
          </div>
          <div>
            <p
              class="MuiTypography-root MuiTypography-body1 css-of8e2j-MuiTypography-root"
            >
              I’ve been fascinated by computers for as long as I can remember. What started as curiosity in a school computer lab—tinkering with HTML and exploring how websites work—quickly turned into a lifelong passion for building things with code. Over time, that curiosity grew from experimenting with small projects to developing production software and contributing to real-world products.
              <br />
              For me, software engineering is more than writing code. It’s a craft that combines problem-solving, empathy for users, and continuous learning. I enjoy building interfaces and systems that are intuitive, performant, and thoughtfully designed—products that people genuinely enjoy using.
              <br />
              <br />
              Driven by a childhood dream to work in technology, I’ve spent countless hours learning and improving my skills. Along the way I’ve worked with a variety of programming languages and technologies, including C, C++, Python, Java, and modern web development tools. These experiences have allowed me to build meaningful projects, collaborate with others, and grow as an engineer.
              <br />
              <br />
              When I’m not coding or exploring new technologies, you’ll probably find me playing football or cricket. Just like software development, these sports remind me that improvement comes through practice, persistence, and teamwork.
              <br />
              <br />
            </p>
          </div>
          <div>
            <div
              class="MuiBox-root css-euzpok"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-g4s3kp-MuiTypography-root"
              >
                When I'm not coding, you'll find me buried in a book. I'm an avid reader — fiction, non-fiction, philosophy, you name it. I believe reading shapes how I think and build.
              </p>
              <a
                data-discover="true"
                href="/books"
                style="color: inherit; text-decoration: none;"
              >
                <span
                  class="MuiTypography-root MuiTypography-body2 css-l9qnjn-MuiTypography-root"
                >
                  My Reading List
                </span>
              </a>
            </div>
          </div>
          <div
            class="MuiBox-root css-1vamrj8"
            data-testid="journey-timeline"
          >
            <div
              style="position: relative;"
            >
              <div
                class="MuiBox-root css-61pg67"
              >
                <div
                  style="position: absolute; top: 20px; left: 10%; right: 10%; height: 2px; transform-origin: left center;"
                >
                  <div
                    class="MuiBox-root css-5mn1cg"
                  />
                </div>
                <div
                  aria-label="First Introduction to Computers - 2011"
                  class="MuiBox-root css-1ev1ol4"
                  role="button"
                  tabindex="0"
                >
                  <div>
                    <div
                      class="MuiBox-root css-1qbfobq"
                    />
                  </div>
                  <div>
                    <span
                      class="css-u4jj8o"
                    >
                      2011
                    </span>
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-1l4z83q-MuiTypography-root"
                    >
                      First Introduction to Computers
                    </p>
                  </div>
                </div>
                <div
                  aria-label="Built My First Website - 2015"
                  class="MuiBox-root css-1ev1ol4"
                  role="button"
                  tabindex="0"
                >
                  <div>
                    <div
                      class="MuiBox-root css-1qbfobq"
                    />
                  </div>
                  <div>
                    <span
                      class="css-u4jj8o"
                    >
                      2015
                    </span>
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-1l4z83q-MuiTypography-root"
                    >
                      Built My First Website
                    </p>
                  </div>
                </div>
                <div
                  aria-label="Started Learning to Code - 2016"
                  class="MuiBox-root css-1ev1ol4"
                  role="button"
                  tabindex="0"
                >
                  <div>
                    <div
                      class="MuiBox-root css-1qbfobq"
                    />
                  </div>
                  <div>
                    <span
                      class="css-u4jj8o"
                    >
                      2016
                    </span>
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-1l4z83q-MuiTypography-root"
                    >
                      Started Learning to Code
                    </p>
                  </div>
                </div>
                <div
                  aria-label="First Freelance Project - 2020"
                  class="MuiBox-root css-1ev1ol4"
                  role="button"
                  tabindex="0"
                >
                  <div>
                    <div
                      class="MuiBox-root css-1qbfobq"
                    />
                  </div>
                  <div>
                    <span
                      class="css-u4jj8o"
                    >
                      2020
                    </span>
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-1l4z83q-MuiTypography-root"
                    >
                      First Freelance Project
                    </p>
                  </div>
                </div>
                <div
                  aria-label="First Internship - 2021"
                  class="MuiBox-root css-1ev1ol4"
                  role="button"
                  tabindex="0"
                >
                  <div>
                    <div
                      class="MuiBox-root css-1qbfobq"
                    />
                  </div>
                  <div>
                    <span
                      class="css-u4jj8o"
                    >
                      2021
                    </span>
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-1l4z83q-MuiTypography-root"
                    >
                      First Internship
                    </p>
                  </div>
                </div>
                <div
                  aria-label="Started Freelancing - 2022"
                  class="MuiBox-root css-1ev1ol4"
                  role="button"
                  tabindex="0"
                >
                  <div>
                    <div
                      class="MuiBox-root css-1qbfobq"
                    />
                  </div>
                  <div>
                    <span
                      class="css-u4jj8o"
                    >
                      2022
                    </span>
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-1l4z83q-MuiTypography-root"
                    >
                      Started Freelancing
                    </p>
                  </div>
                </div>
                <div
                  aria-label="Landed My First Job - 2023"
                  class="MuiBox-root css-1ev1ol4"
                  role="button"
                  tabindex="0"
                >
                  <div>
                    <div
                      class="MuiBox-root css-1qbfobq"
                    />
                  </div>
                  <div>
                    <span
                      class="css-u4jj8o"
                    >
                      2023
                    </span>
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-1l4z83q-MuiTypography-root"
                    >
                      Landed My First Job
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="MuiBox-root css-e03jn5"
      >
        <div>
          <div
            class="MuiBox-root css-ucbi2i"
          >
            <span
              class="scroll-ring"
            />
            <span
              class="scroll-dot"
            />
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`AboutHero matches snapshot (light mode) 1`] = `
<div>
  <section
    class="css-x7wijn"
    data-testid="about-hero"
  >
    <div
      class="MuiBox-root css-1hs42wd"
    >
      <div
        class="MuiBox-root css-1s9lrlc"
        variant="1"
      />
      <div
        class="MuiBox-root css-1uwv43x"
        variant="2"
      />
      <div
        class="MuiBox-root css-1vjz8a"
        variant="3"
      />
    </div>
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-8y1sfv-MuiContainer-root"
    >
      <div
        style="display: flex; flex-direction: column; align-items: center;"
      >
        <div
          class="MuiBox-root css-1qpzi1f"
        >
          <div>
            <p
              class="MuiTypography-root MuiTypography-body1 css-fnmglg-MuiTypography-root"
            >
              About Me
            </p>
          </div>
          <div>
            <h1
              class="css-sdsz4r"
            >
              Hi, I'm Hemanth. I design thoughtful digital experiences.
            </h1>
          </div>
          <div>
            <p
              class="MuiTypography-root MuiTypography-body1 css-typhwk-MuiTypography-root"
            >
              I’ve been fascinated by computers for as long as I can remember. What started as curiosity in a school computer lab—tinkering with HTML and exploring how websites work—quickly turned into a lifelong passion for building things with code. Over time, that curiosity grew from experimenting with small projects to developing production software and contributing to real-world products.
              <br />
              For me, software engineering is more than writing code. It’s a craft that combines problem-solving, empathy for users, and continuous learning. I enjoy building interfaces and systems that are intuitive, performant, and thoughtfully designed—products that people genuinely enjoy using.
              <br />
              <br />
              Driven by a childhood dream to work in technology, I’ve spent countless hours learning and improving my skills. Along the way I’ve worked with a variety of programming languages and technologies, including C, C++, Python, Java, and modern web development tools. These experiences have allowed me to build meaningful projects, collaborate with others, and grow as an engineer.
              <br />
              <br />
              When I’m not coding or exploring new technologies, you’ll probably find me playing football or cricket. Just like software development, these sports remind me that improvement comes through practice, persistence, and teamwork.
              <br />
              <br />
            </p>
          </div>
          <div>
            <div
              class="MuiBox-root css-jl4oqu"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-k9b86f-MuiTypography-root"
              >
                When I'm not coding, you'll find me buried in a book. I'm an avid reader — fiction, non-fiction, philosophy, you name it. I believe reading shapes how I think and build.
              </p>
              <a
                data-discover="true"
                href="/books"
                style="color: inherit; text-decoration: none;"
              >
                <span
                  class="MuiTypography-root MuiTypography-body2 css-1oc0vx0-MuiTypography-root"
                >
                  My Reading List
                </span>
              </a>
            </div>
          </div>
          <div
            class="MuiBox-root css-1vamrj8"
            data-testid="journey-timeline"
          >
            <div
              style="position: relative;"
            >
              <div
                class="MuiBox-root css-61pg67"
              >
                <div
                  style="position: absolute; top: 20px; left: 10%; right: 10%; height: 2px; transform-origin: left center;"
                >
                  <div
                    class="MuiBox-root css-1wnmfj9"
                  />
                </div>
                <div
                  aria-label="First Introduction to Computers - 2011"
                  class="MuiBox-root css-1ev1ol4"
                  role="button"
                  tabindex="0"
                >
                  <div>
                    <div
                      class="MuiBox-root css-wdxwfc"
                    />
                  </div>
                  <div>
                    <span
                      class="css-1rb3lmj"
                    >
                      2011
                    </span>
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-14kffx5-MuiTypography-root"
                    >
                      First Introduction to Computers
                    </p>
                  </div>
                </div>
                <div
                  aria-label="Built My First Website - 2015"
                  class="MuiBox-root css-1ev1ol4"
                  role="button"
                  tabindex="0"
                >
                  <div>
                    <div
                      class="MuiBox-root css-wdxwfc"
                    />
                  </div>
                  <div>
                    <span
                      class="css-1rb3lmj"
                    >
                      2015
                    </span>
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-14kffx5-MuiTypography-root"
                    >
                      Built My First Website
                    </p>
                  </div>
                </div>
                <div
                  aria-label="Started Learning to Code - 2016"
                  class="MuiBox-root css-1ev1ol4"
                  role="button"
                  tabindex="0"
                >
                  <div>
                    <div
                      class="MuiBox-root css-wdxwfc"
                    />
                  </div>
                  <div>
                    <span
                      class="css-1rb3lmj"
                    >
                      2016
                    </span>
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-14kffx5-MuiTypography-root"
                    >
                      Started Learning to Code
                    </p>
                  </div>
                </div>
                <div
                  aria-label="First Freelance Project - 2020"
                  class="MuiBox-root css-1ev1ol4"
                  role="button"
                  tabindex="0"
                >
                  <div>
                    <div
                      class="MuiBox-root css-wdxwfc"
                    />
                  </div>
                  <div>
                    <span
                      class="css-1rb3lmj"
                    >
                      2020
                    </span>
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-14kffx5-MuiTypography-root"
                    >
                      First Freelance Project
                    </p>
                  </div>
                </div>
                <div
                  aria-label="First Internship - 2021"
                  class="MuiBox-root css-1ev1ol4"
                  role="button"
                  tabindex="0"
                >
                  <div>
                    <div
                      class="MuiBox-root css-wdxwfc"
                    />
                  </div>
                  <div>
                    <span
                      class="css-1rb3lmj"
                    >
                      2021
                    </span>
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-14kffx5-MuiTypography-root"
                    >
                      First Internship
                    </p>
                  </div>
                </div>
                <div
                  aria-label="Started Freelancing - 2022"
                  class="MuiBox-root css-1ev1ol4"
                  role="button"
                  tabindex="0"
                >
                  <div>
                    <div
                      class="MuiBox-root css-wdxwfc"
                    />
                  </div>
                  <div>
                    <span
                      class="css-1rb3lmj"
                    >
                      2022
                    </span>
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-14kffx5-MuiTypography-root"
                    >
                      Started Freelancing
                    </p>
                  </div>
                </div>
                <div
                  aria-label="Landed My First Job - 2023"
                  class="MuiBox-root css-1ev1ol4"
                  role="button"
                  tabindex="0"
                >
                  <div>
                    <div
                      class="MuiBox-root css-wdxwfc"
                    />
                  </div>
                  <div>
                    <span
                      class="css-1rb3lmj"
                    >
                      2023
                    </span>
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-14kffx5-MuiTypography-root"
                    >
                      Landed My First Job
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="MuiBox-root css-1odelyx"
      >
        <div>
          <div
            class="MuiBox-root css-ucbi2i"
          >
            <span
              class="scroll-ring"
            />
            <span
              class="scroll-dot"
            />
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
